--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,18 +28,13 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/mini_dwarf"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/mini_dwarf"
         android:supportsRtl="true"
         android:theme="@style/Theme.Projektzespolowy"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name=".NavBarActivity"-->
-<!--            android:exported="false"-->
-<!--            android:label="@string/title_activity_nav_bar"-->
-<!--            android:theme="@style/Theme.Projektzespolowy" />-->
         <activity
             android:name=".HomeActivity"
             android:exported="false"
